# rag

./: .gitignore  README.md  llm.py  main.py  pyproject.toml
source_files/: Formulas.md  beginning_excel_2019.md  cfi_ebook.md  definations.md
src/: load_docs.py  retriever.py
